# telos

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pip-audit.yml
contracts/: estimated_tax_request.schema.json  realized_lots.schema.json  schedule_e_worksheet.schema.json  tax_projection.schema.json
forms/: README.md
infrastructure/: deploy-on-merge.sh  telos_runner_spot_bootstrap.sh
infrastructure/iam/: README.md  telos-runner-executor-role-policy.json
params/: example_pack.yaml  federal_underpayment_rates.yaml  ty2024.yaml  ty2024_oh.yaml  ty2025.yaml  ty2025_oh.yaml  ty2025_wa.yaml  ty2026.yaml  ty2026_oh.yaml
src/telos/: __init__.py  contracts.py  models.py  orchestrate.py  replay.py
src/telos/engine/: __init__.py  amt_guard.py  brackets.py  estimated.py  form1040.py  form2210.py  form8949.py  form8959.py  form8960.py  form8995a.py  guard.py  ohio.py  qdcgt.py  reconcile_lots.py  rounding.py  schedule_a.py  schedule_d.py  schedule_e.py  tax_lookup.py  trace.py  wa_excise.py
src/telos/forms/: __init__.py  filler.py  introspect.py  package.py  paths.py  profile.py
src/telos/ingest/: __init__.py  confirm.py  extract.py  prompt_loader.py  redaction.py  schema.py
src/telos/params/: __init__.py
tests/: test_amt_guard.py  test_brackets.py  test_estimated.py  test_feeder.py  test_form1040.py  test_form2210.py  test_form8995a.py  test_guard.py  test_models.py  test_params.py  test_planning.py  test_qdcgt.py  test_replay.py  test_replay_personal.py  test_rounding.py  test_schedule2_taxes.py  test_schedule_a.py  test_schedule_d.py  test_schedule_e.py  test_state_modules.py  test_tax_lookup.py  test_trace.py  test_ty2024_oh_pack.py  test_ty2024_pack.py  test_ty2025_pack.py  test_ty2026_oh_pack.py  test_ty2026_pack.py
tests/fixtures/: synthetic_ty2025_replay.json
tests/forms/: conftest.py  test_filler.py  test_introspect.py  test_package.py  test_paths.py  test_profile.py  test_real_template.py
tests/ingest/: conftest.py  synthetic_w2.py  test_confirm.py  test_extract.py  test_prompt_loader.py  test_redaction.py  test_schema.py
web/: .env.example  README.md  eslint.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: deduction-panel.tsx  income-sources-panel.tsx  investment-gains-panel.tsx  tax-planning-panel.tsx  ui.tsx  what-if-panel.tsx
web/lib/: format.ts  metron.ts  tax-projection.ts  types.ts
(+12 files in other folders)
